# proyecto-si889-2025-i-u3-chite-floresq-leyva-chambi

./: .gitignore  Comandos.txt  DICCIONARIO DE DATOS.docx  DICCIONARIO DE DATOS.md  Dockerfile  Estandares_de_Programación.md  FD01-EPIS-Informe de Factibilidad.docx  FD01-EPIS-Informe de Factibilidad.md  FD02-EPIS-Informe Vision.docx  FD02-EPIS-Informe Vision.md  FD03-EPIS-Informe Especificación Requerimientos.docx  FD03-EPIS-Informe Especificación Requerimientos.md  FD04-EPIS-Informe Arquitectura de Software.md  FD05-EPIS-Informe ProyectoFinal.docx  FD05-EPIS-Informe ProyectoFinal.md  FD06-EPIS-PropuestaProyecto.docx  FD06-EPIS-PropuestaProyecto.md  README.md  __init__.py  proyecto.md  pyproject.toml  requirements.txt  ~$01-EPIS-Informe de Factibilidad.docx  ~$05-EPIS-Informe ProyectoFinal.docx
.github/workflows/: analisis_deploy.yml  azure-webapps-python.yml  deployInfra.yml  publish_package.yml  release.yml
Doc2Markdown/: .coverage  bd.sql  docmark.db  docmark.db.sql  gaaa.md  run.py  sonar-project.properties  test_connection.py
Doc2Markdown/.scannerwork/: report-task.txt
Doc2Markdown/Doc_Pruebitas/: EJERCICIO3.docx
Doc2Markdown/app/: app.py
Doc2Markdown/app/controllers/: document_controller.py  github_controller.py  similarity_controller.py  (+1 more)
Doc2Markdown/config/: .env  config.py  database.py
Doc2Markdown/infra/: main.tf  variables.tf
Doc2Markdown/report_coverage/: coverage.xml
Doc2Markdown/uploads/: 07f78cdfeca94afb9eeab4a03be9564b_parafraseado.docx  1a7492406a8c43f5aa4f5bf892e5ca92_Version_2.docx  2f16926df0f940a9b0d45f41116f4b7e_FD01-EPIS-Informe_de_Factibilidad.docx  481f7e7f9f484331a1c1f84cd79d8498_Version1.docx  48fe2c5d2756409f84447a3ff408fbc7_Patrones_de_Software_FD02-EPIS-Informe_Vision.docx  746a10743fe34131bf08dc2668cdb68f_EJERCICIO3.docx  7ffd933dae9b4e83864ce8d6d6db240f_EJERCICIO3.docx  Articulo_v2.rar  _Footer.md  _Sidebar.md  a48da0e297764c1fafb09eae24d59a88_FD01-PARAFRASEADO.docx  a7ad903113e4488abb938be05e8b565d_Articulo_Redes.docx  e06bc624332d4d99bdce7307e5613213_test_document.txt
img/: FD05-EPIS-Informe ProyectoFinal.md
(+209 files in other folders)
